- fix header height when not expanded - fix user list alignment

--- a/src/components/UserListElement.scss
+++ b/src/components/UserListElement.scss
@@ -16,4 +16,9 @@
   }
 }
 
+.UserListElement_score {
+  padding-left: 1em;
+  text-align: right;
+}
+
 
